working brown sphere with tracking and random noise

--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
         <script src="js/jquery.js"></script>
 
         <script src="js/io.js"></script>
-
         <script src="js/od/compatibility.js"></script>
         <script src="js/od/smoother.js"></script>
         
         <script src="js/od/objectdetect.js"></script>
-        <script src="js/od/objectdetect.upperbody.js"></script>
+        <script src="js/od/objectdetect.handfist.js"></script>
+        <script src="js/od/objectdetect.handopen.js"></script>
+        <script src="js/od/objectdetect.frontalface.js"></script>
 
         <script src="js/od/jquery.objectdetect.js"></script>
         <Script src="js/sunglasses.js"></script>
 
         <script src="js/three.js"></script>
+        <script src="js/loader.js"></script>
         <script src="js/renderer.js"></script>
     </head>
-    <body>
+    <body style="background:#ccd;">
         <div id="holder" style="width:640; height:480; position:relative;">
             <video id="video" style=""></video>
             <div id="canvas-holder" style="width:640; height:480; position: absolute; z-index:300; top: 0; left: 0;"></div>
