--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
         <script src="js/od/objectdetect.frontalface.js"></script>
 
         <script src="js/od/jquery.objectdetect.js"></script>
-        <Script src="js/sunglasses.js"></script>
+        <Script src="js/detectMain.js"></script>
 
         <script src="js/three.js"></script>
-        <script src="js/loader.js"></script>
         <script src="js/renderer.js"></script>
     </head>
     <body style="background:#ccd;">
